--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_training">Training</string>
     <string name="title_workouts">Workouts</string>
     <string name="title_settings">Settings</string>
+    <string name="title_statistics">Statistics</string>
 </resources>
