--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,14 @@
 <resources>
     <string name="empty_string"> </string>
     <string name="app_name">We got the Moves!</string>
+    <string name="app_database">SGWeGotTheMovesDB</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_training">Training</string>
     <string name="title_workouts">Workouts</string>
     <string name="title_settings">Settings</string>
     <string name="title_statistics">Statistics</string>
+    <string name="edit">edit</string>
+    <string name="delete">delete</string>
+    <string name="zero">0</string>
 </resources>
