Enhanced design workout planner + removed unnecessary reload of list items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="edit">edit</string>
     <string name="delete">delete</string>
     <string name="zero">0</string>
+    <string name="copy">copy</string>
 </resources>
