--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,20 @@
     <string name="title_statistics">Statistics</string>
     <string name="edit">edit</string>
     <string name="delete">delete</string>
-    <string name="zero">0</string>
     <string name="copy">copy</string>
+    <string name="yes">Yes</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete_workout_titel">Delete Workout: %1$s</string>
+    <string name="delete_workout_message">Are you sure that you want to delete this item?</string>
+    <string name="copy_workout_titel">Copy Workout: %1$s</string>
+    <string name="copy_workout_message">Are you sure that you want to copy this item?</string>
+    <string name="set_workout_title">Set Workout: %1$s</string>
+    <string name="enter_text">Please enter text here</string>
+    <string name="set_exercise_amount">Set amount of Exercise: %1$s</string>
+    <string name="add">add</string>
+    <string name="select_exercises">Select any Exercises for Workout: %1$s</string>
+    <string name="no_items">No items found</string>
+    <string name="new_workout">Add new Workout</string>
+    <string name="untitled">Untitled</string>
+    <string name="expand">expand</string>
 </resources>
