--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="new_workout">Add new Workout</string>
     <string name="untitled">Untitled</string>
     <string name="expand">expand</string>
+    <string name="amount">Amount</string>
 </resources>
