+ Dashboard overhaul + Update README.md + Add separated image assets folder

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -29,4 +29,9 @@
     <string name="amount">Amount</string>
     <string name="name">Name</string>
     <string name="info">Info</string>
+    <string name="instructions">Instructions</string>
+    <string name="testvideo">C0DPdy98e4c</string>
+    <string name="instruction_title">Instruction of Exercise:\n%1$s</string>
+    <string name="ok">OK</string>
+    <string name="description">Description</string>
 </resources>
