--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,9 @@
     <string name="header">Header</string>
     <string name="unit">Unit</string>
     <string name="repetitions">Repetitions</string>
-    <string name="duration">Duration\n[seconds]</string>
+    <string name="duration">Duration\n[hh:mm:ss]</string>
+    <string name="hours">hours</string>
+    <string name="minutes">minutes</string>
+    <string name="seconds">seconds</string>
+    <string name="statistiscs_titel_calorie_burn">Today\'s Calorie Burn</string>
 </resources>
