--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="minutes">minutes</string>
     <string name="seconds">seconds</string>
     <string name="statistiscs_titel_calorie_burn">Today\'s Calorie Burn</string>
+    <string name="your_calorie_level">Daily calorie level: </string>
 </resources>
