--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,9 +35,20 @@
     <string name="unit">Unit</string>
     <string name="repetitions">Repetitions</string>
     <string name="duration">Duration\n[hh:mm:ss]</string>
-    <string name="hours">hours</string>
-    <string name="minutes">minutes</string>
-    <string name="seconds">seconds</string>
-    <string name="statistiscs_titel_calorie_burn">Today\'s Calorie Burn</string>
-    <string name="your_calorie_level">Daily calorie level: </string>
+    <string name="hhmmss">[hh:mm:ss]</string>
+    <string name="yymmddhhmmss">[yy:MM:dd:hh:mm:ss]</string>
+    <string name="hours">Hours</string>
+    <string name="minutes">Minutes</string>
+    <string name="seconds">Seconds</string>
+    <string name="statistics_titel_calorie_burn">Today\'s Calorie Burn</string>
+    <string name="your_calorie_level">Your calorie goal: </string>
+    <string name="weekly_training_results">Weekly Training Results</string>
+    <string name="your_total_training_time">Your total training time:</string>
+    <string name="your_week_s_avg_training_time">Weekly Ø-training time per day:</string>
+    <string name="default_total_time">00:00:00:00:00:00</string>
+    <string name="default_time">00:00:00</string>
+    <string name="cw_zero">0000 CW00</string>
+    <string name="right">right</string>
+    <string name="left">left</string>
+    <string name="exercise_analysis">Exercise Analysis</string>
 </resources>
