--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="copy">copy</string>
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
-    <string name="delete_workout_titel">Delete Workout: %s</string>
+    <string name="delete_workout_title">Delete Workout: %s</string>
     <string name="delete_workout_message">Are you sure that you want to delete this item?</string>
-    <string name="copy_workout_titel">Copy Workout: %s</string>
+    <string name="copy_workout_title">Copy Workout: %s</string>
     <string name="copy_workout_message">Are you sure that you want to copy this item?</string>
     <string name="set_workout_title">Set title of Workout: %s</string>
     <string name="set_exercise_amount">Set amount of Exercise: %s</string>
@@ -27,12 +27,9 @@
     <string name="amount">Amount</string>
     <string name="name">Name</string>
     <string name="info">Info</string>
-    <string name="instructions">Instructions</string>
     <string name="instruction_title">Instruction of Exercise: %s</string>
     <string name="ok">OK</string>
     <string name="description">Description</string>
-    <string name="header">Header</string>
-    <string name="unit">Unit</string>
     <string name="repetitions">Repetitions</string>
     <string name="duration">Duration\n[hh:mm:ss]</string>
     <string name="hh_mm_ss">[hh:mm:ss]</string>
@@ -40,7 +37,7 @@
     <string name="hours">Hours</string>
     <string name="minutes">Minutes</string>
     <string name="seconds">Seconds</string>
-    <string name="statistics_titel_calorie_burn">Today\'s Calorie Burn</string>
+    <string name="statistics_title_calorie_burn">Today\'s Calorie Burn</string>
     <string name="your_calorie_level">Your calorie goal: </string>
     <string name="weekly_training_results">Weekly Training Results</string>
     <string name="your_total_training_time">Your total training time:</string>
@@ -57,7 +54,7 @@
     <string name="weekly_total_time">Weekly total time:</string>
     <string name="dd_hh_mm_ss">[dd:hh:mm:ss]</string>
     <string name="total_week_time">00:00:00:00</string>
-    <string name="profil_settings">Profil settings</string>
+    <string name="profile_settings">Profile settings</string>
     <string name="enter_username_here">Enter username here</string>
     <string name="save">Save</string>
     <string name="enter_age_here">Enter age here</string>
@@ -77,4 +74,8 @@
     <string name="back">Back</string>
     <string name="on">On</string>
     <string name="off">Off</string>
+    <string name="last_workouts">Last Workouts</string>
+    <string name="all_workouts">All Workouts</string>
+    <string name="recent_trainings">Recent Trainings</string>
+    <string name="all_trainings">All Trainings</string>
 </resources>
