adding timeBetweenExercise to SettingsView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,7 @@
     <string name="all_trainings">All Trainings</string>
     <string name="stop">STOP</string>
     <string name="start">Start</string>
+    <string name="time_between_exercise">Time between \nExercise [sec]</string>
+    <string name="enter_time_between_exercise">Enter time</string>
 
 </resources>
