--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,6 @@
     <string name="all_trainings">All Trainings</string>
     <string name="stop">STOP</string>
     <string name="start">Start</string>
+    <string name="all_correct">all correct</string>
 
 </resources>
