Recording (not perfect), removed "start-recording" in training alert dialog, adjusted mediapipe overlay, adjusted mediapipe finishedExercise dialog, fix playback list refreshing when playback was recorded, minor cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,12 @@
     <string name="stop">STOP</string>
     <string name="start">Start</string>
     <string name="all_correct">all correct</string>
+    <string name="please_grant_camera_access">Please grant camera access</string>
+    <string name="training_paused">Training Paused</string>
+    <string name="skip">Skip</string>
+    <string name="finish">Finish</string>
+    <string name="exercise">exercise</string>
+    <string name="_0_x">0 / X</string>
+    <string name="continue_text">continue</string>
 
 </resources>
